[package]
name = "json-distiller"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Price"]
license = "MIT"
description = "Reverse engineer arbitrary JSON structures for LLM analysis - 99%+ compression while preserving structure"
repository = "https://github.com/jacobprice808/json-distiller"
keywords = ["json", "llm", "mcp", "compression", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ahash = "0.8"  # Fast non-cryptographic hashing (replaces md5)
rustc-hash = "1.1"  # Fast FxHashMap/FxHashSet
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
# Official MCP Rust SDK
rmcp = { version = "0.8", features = ["macros", "server", "transport-io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
path-absolutize = "3.1"
