[package]
name = "json-distiller"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Price"]
license = "MIT"
description = "Reverse engineer arbitrary JSON structures for LLM analysis - 99%+ compression while preserving structure"
repository = "https://github.com/jacobprice808/json-distiller"
keywords = ["json", "llm", "mcp", "compression", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }  # Required for Python hash compatibility
clap = { version = "4.5", features = ["derive"] }
ahash = "0.8"  # Fast non-cryptographic hashing
rustc-hash = "1.1"  # Fast FxHashMap/FxHashSet
indexmap = "2.0"  # Preserve insertion order like Python dicts
md-5 = "0.10"  # MD5 for Python-compatible structure hashes
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
# Official MCP Rust SDK
rmcp = { version = "0.8", features = ["macros", "server", "transport-io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
path-absolutize = "3.1"
